main code written - working on tests